--- a/xxx.html
+++ b/xxx.html
@@ -52,7 +52,7 @@
             <h3>Login</h3>
             <input type="email" id="loginEmail" placeholder="Your Email" required>
             <input type="password" id="loginPassword" placeholder="Password" required>
-            <button type="submit"><a href=""></a>Login</button>
+            <button><a>href="xxx.html">login</a></button>
         </form>
     </div>
 
@@ -71,9 +71,9 @@
 </section>
 
 <footer>
-    <p>© 2025 Building Website | All Rights Reserved</p>
+    <p>© 2025 Building Website | All Rights Reserved olivier</p>
 </footer>
-<!-- 
+
 <script src="script.js">
 
     document.getElementById("contactForm").addEventListener("submit", function (e) {
@@ -97,7 +97,7 @@
     })
     .catch(err => {
         document.getElementById("response").innerText = "Error sending message";
-    <!-- }); -> -->
+    <!-- }); 
 });
 
 </script>
@@ -228,4 +228,3 @@ document.getElementById("loginForm").addEventListener("submit", function(e) {
 </script>
 </body>
 </html>
-
